--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="row">
             <h2> Dados do paciente</h2>
-            <form action="/solicitacao/cadastro" method="post">
+            <form action="" th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="post">
                 <div class="col s12">
                     <span>Nome Completo:</span>
                     <input name="nome" type="text">
@@ -81,25 +81,34 @@
 
                 <h4>Dados do Acompanhante</h4>
 
-                <div th:each="acompanhante, itemStat : *{acompanhantes}">
-                    <div class="col s12">
-                        <h5 th:text="'Acompanhante ' + ${indice + 1}">:</h5>
-                        <span>Nome Completo:</span>
-                        <input th:field="*{acompanhantes[__${itemStat.index}__].nome}" type="text">
-                    </div>
 
-                    <div class="col s12">
-                        <label>
-                            <input th:field="*{acompanhantes[__${itemStat.index}__].genero1}" type="radio" value ="F" >
-                            <span>F</span>
-                        </label>
-                        <label>
-                            <input th:field="*{acompanhantes[__${itemStat.index}__].genero1}" type="radio" value ="M">
-                            <span>M</span>
-                        </label>
-                    </div>
-                </div>
 
+                <!--<div th:each="acompanhante, itemStat : *{acompanhantes}">-->
+                    <!--<div class="col s12">-->
+                        <!--<h5 th:text="'Acompanhante ' + ${indice + 1}">:</h5>-->
+                        <!--<span>Nome Completo:</span>-->
+                        <!--<input th:field="*{acompanhantes[__${itemStat.index}__].nome}" type="text">-->
+                    <!--</div>-->
+
+                    <!--<div class="col s12">-->
+                        <!--<label>-->
+                            <!--<input th:field="*{acompanhantes[__${itemStat.index}__].genero1}" type="radio" value ="F" >-->
+                            <!--<span>F</span>-->
+                        <!--</label>-->
+                        <!--<label>-->
+                            <!--<input th:field="*{acompanhantes[__${itemStat.index}__].genero1}" type="radio" value ="M">-->
+                            <!--<span>M</span>-->
+                        <!--</label>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+
+
+
+                    <div th:each="acompanhante, acompIndex : ${solicitacao.acompanhantes}">
+                        <p>Nome acompanhante <span th:text="${acompIndex.index + 1}"></span>: <input type="text" th:field="*{acompanhantes[__${acompIndex.index}__].nome}"></p>
+                        <p>Genero acompanhante <span th:text="${acompIndex.index + 1}"></span>: <input type="text" th:field="*{acompanhantes[__${acompIndex.index}__].genero}"></p>
+                    </div>
 
                 <div class="col s12">
                     <button type="submit">Salvar</button>
