<@laurascclaro, @rfelipe> ajusta campo email

--- a/app/src/main/resources/templates/esqueciMinhaSenha/esqueciSenha.html
+++ b/app/src/main/resources/templates/esqueciMinhaSenha/esqueciSenha.html
@@ -25,10 +25,10 @@
         <h4>Problemas para se conectar?</h4>
         <p>Digite seu endereço de e-mail cadastrado e enviaremos instruções de ajuda.</p>
         <div class="row">
+
             <div class="input-field col s6 offset-s3">
                 <i class="material-icons prefix">contact_mail</i>
-                <input id="email" type="text" name="email" class="validate">
-                <label for="email">E-mail</label>
+                <input id="email" type="email" name="email" class="validate" placeholder="E-mail">
             </div>
         </div>
 
