<@matheusmalta, @diovanemendes> Tentando debugar login

--- a/app/src/main/resources/templates/login/login.html
+++ b/app/src/main/resources/templates/login/login.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="input-field col s6 offset-s3">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="first_name" type="text" name="usuario" class="validate">
+                        <input id="first_name" type="text" name="nome" class="validate">
                         <label for="first_name">Usuário</label>
                     </div>
                 </div>
