<@matheus-malta @rfelipe> melhorando o código

--- a/app/src/main/resources/templates/esqueciMinhaSenha/style.css
+++ b/app/src/main/resources/templates/esqueciMinhaSenha/style.css
@@ -1,6 +1,10 @@
 nav{
-    background-color: #1abc9c;
+    background-color: rgb(26,188,156);
 }
 .container{
-    margin-top: 12%;
+    margin-top: 10%;
+}
+
+h1{
+    font-size: 42px;
 }
