<@eduarda96 @laurascclaro Implementa botão cancelar>

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -114,6 +114,9 @@
                 <div class="col s12">
                     <button type="submit" onclick="alert('Solicitacao enviada')">Salvar</button>
                 </div>
+                <div class = "col s12">
+                    <input type="reset" value="Cancelar" onclick="window.location.href='#'"/>
+                </div>
             </form>
 
             <div id="modal1" class="modal">
