--- a/app/src/main/resources/templates/esqueciMinhaSenha/esqueciSenha.html
+++ b/app/src/main/resources/templates/esqueciMinhaSenha/esqueciSenha.html
@@ -3,34 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Esqueci Minha Senha</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="../../static/bulma/css/bulma.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <header>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Hospebem</a>
-            <ul id="nav-mobile" class="left hide-on-med-and-down">
-                <li><a href="#">Login</a></li>
-            </ul>
+    <nav class="navbar" role="navigation" id="cabecalho" aria-label="main navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="https://bulma.io">
+                <p>HospeBEM</p>
+            </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        <a class="button is-primary">
+                            <strong>Logar</strong>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
 </header>
+
 <div class="container card-content valign center">
     <form>
-        <h1>Problemas para se conectar?</h1>
-        <p>Digite seu endereço de e-mail cadastrado e enviaremos instruções de ajuda.</p>
-        <div class="row">
-            <div class="input-field col s6 offset-s3">
-                <i class="material-icons prefix">contact_mail</i>
-                <input id="email" type="email" name="email" class="validate" placeholder="E-mail">
-            </div>
+        <h1 class="title is-1" id="titulo">Problemas para se conectar?</h1>
+        <p class="subtitle is-5">Digite seu endereço de e-mail cadastrado e enviaremos instruções de ajuda.</p>
+        <div class="columns is-mobile is-centered">
+            <input class="input is-medium" type="email" id="email" placeholder="Email">
+            <span class="icon is-left">
+                <i class="fas fa-envelope"></i>
+            </span>
+
+            <span class="icon is-right">
+                 <i class="fas fa-check"></i>
+            </span>
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">Recuperar Senha
-            <i class="material-icons right">chevron_right</i>
-        </button>
+        <div class="botao">
+            <input type="submit" id="button" class="button is-primary is-active" value="Recuperar Senha">
+        </div>
     </form>
 </div>
 </body>
