--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -17,8 +17,8 @@
                     <a href="/pessoa/lista"><li>Pessoas</li></a>
                     <a href="/pessoa/cadastro"><li>Cadastrar Pessoa</li></a>
                     <a href="/solicitacao/cadastro"><li>Cadastro solicitação </li></a>
-                    <a href="/listaCasa"><li>Lista geral de solicitações casa</li></a>
-                    <a href="/listaHospital"><li>Lista geral de solicitações hospital</li></a>
+                    <a href="/solicitacao/casa/lista"><li>Lista geral de solicitações casa</li></a>
+                    <a href="/solicitacao/hospital/lista"><li>Lista geral de solicitações hospital</li></a>
                 </ul>
             </nav>
         </div>
