--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -35,6 +35,7 @@
                 </div>
 
                 <div class="col s12">
+                    <span>Sexo:</span>
                     <label>
                     <input name="genero" type="radio" value ="F" >
                     <span>F</span>
@@ -47,10 +48,30 @@
 
                 <div class="col s12">
                     <span>Data de nascimento:</span>
-                    <input name="dataNascimento" type="text" class="datepicker">
+                    <input  placeholder="Clique para selecionar uma data" name="dataNascimento" type="text" class="datepicker" onkeypress="return false;">
                 </div>
 
                 <div class="col s12">
+                    <span>O paciente é cadeirante?</span>
+                    <label>
+                        <input name="cadeirante" type="radio" value ="sim" >
+                        <span>Sim</span>
+                    </label>
+                    <label>
+                        <input name="cadeirante" type="radio" value ="nao">
+                        <span>Não</span>
+                    </label>
+
+                    <div>
+                        <span>Caso o paciente seja cadeirante, informe o seu peso:</span>
+                        <input name="peso" type="text">
+                    </div>
+                </div>
+
+
+
+                <div class="col s12">
+                    <span>Situação do Paciente:</span>
                     <label>
                         <input name="situacao" type="radio" value ="pre" >
                         <span>Pré-transplantado</span>
@@ -59,6 +80,11 @@
                         <input name="situacao" type="radio" value ="pos">
                         <span>Pós-transplantado</span>
                     </label>
+                </div>
+
+                <div class="col s12">
+                    <span>Telefone para Contato:</span>
+                    <input name="telefone" type="text">
                 </div>
 
                 <h3>Endereço:</h3>
