--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -12,6 +12,9 @@
 
 <body>
 <header>
+    <div class = "col s12">
+        <button><a href="/">Voltar</a> </button>
+    </div>
     <nav class="navbar">
         <div class="nav-wrapper container">
                 <h1>
@@ -23,9 +26,7 @@
 
 <main>
     <div class="container">
-        <div class = "col s12">
-            <button><a href="/">Voltar</a> </button>
-        </div>
+
         <div class="row">
             <h2> Dados do paciente</h2>
             <form action="" th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="post">
@@ -115,7 +116,6 @@
 
                 <h4>Dados do Acompanhante</h4>
 
-
                     <div th:each="acompanhante, acompIndex : ${solicitacao.acompanhantes}">
                         <p>Nome acompanhante <span th:text="${acompIndex.index + 1}"></span>:
                             <input type="text" th:field="*{acompanhantes[__${acompIndex.index}__].nome}">
@@ -140,23 +140,14 @@
                         </div>
                     </div>
 
-                <div class="col s12">
-                    <button type="submit" onclick="alert('Solicitacao enviada')">Salvar</button>
+                <div class="col s6">
+                    <button type="submit" onclick="alert('Solicitacao enviada')">Enviar Solicitação</button>
                 </div>
-                <div class = "col s12">
-                    <input type="reset" value="Cancelar"/>
+
+                <div class = "col s6">
+                    <input type="reset" value="Limpar Formulário"/>
                 </div>
             </form>
-
-            <div id="modal1" class="modal">
-                <div class="modal-content">
-                    <h4>Modal Header</h4>
-                    <p>A bunch of text</p>
-                </div>
-                <div class="modal-footer">
-                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-                </div>
-            </div>
         </div>
     </div>
 </main>
