--- a/app/src/main/resources/templates/pessoa/lista.html
+++ b/app/src/main/resources/templates/pessoa/lista.html
@@ -2,8 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Lista de Pessoas</title>
     <link href="/css/estilo.css" rel="stylesheet">
+
 </head>
 <style>
 table {
