Excluindo pasta Bulma e adicionando link do css remoto

--- a/app/src/main/resources/templates/esqueciMinhaSenha/esqueciSenha.html
+++ b/app/src/main/resources/templates/esqueciMinhaSenha/esqueciSenha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Esqueci Minha Senha</title>
-    <link rel="stylesheet" href="../../static/bulma/css/bulma.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
