--- a/app/src/main/resources/templates/esqueciMinhaSenha/esqueciSenha.html
+++ b/app/src/main/resources/templates/esqueciMinhaSenha/esqueciSenha.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Esqueci Minha Senha</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../static/css/esqueciSenha.css">
 </head>
 <body>
 <header>
