--- a/app/src/main/resources/static/css/style.css
+++ b/app/src/main/resources/static/css/style.css
@@ -1,25 +1,20 @@
-
-body{
-    font-family: sans-serif;
+body {
+    font-family: arial, sans-serif;
 }
 
-.navbar{
-    background-color: rgb(113, 112, 116);
+.centralizar{
     text-align: center;
-    font-size: 172%;
 }
 
-.dados-paciente{
-    text-align: justify;
-}
-.dados-paciente *{
-    margin-bottom: 16px;
+.espacamento {
+    margin: 70px;
 }
 
-.sessao {
-    margin-top: 30px;
-}
+.input.input-fancy{
 
+    border-color: rgb(131, 186, 255);
+
+}
 .centralizar{
     display: flex;
     justify-content: center;
